<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_quality_dialog">Choose Quality:</string>
    <string name="search_hint">Search</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="unsubscribe">UNSUBSCRIBE</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="loggedIn">Logged in successfully!</string>
    <string name="loggedout">Logged out successfully!</string>
    <string name="registered">Registered successfully! You may now subscribe to channels you want.</string>
    <string name="already_logged_in">You are already logged in, you may logout of your account.</string>
    <string name="instances">Choose an instance</string>
    <string name="customInstance">Add a custom instance</string>
    <string name="region">Choose a region</string>
    <string name="login_register">Login/Register</string>
    <string name="please_login">Please Login or Register from the settings to show your Subscriptions!</string>
    <string name="subscribeIsEmpty">Subscribe to some channels first!</string>
    <string name="cannotDownload">Can\'t Download this stream!</string>
    <string name="dlcomplete">Download is completed!</string>
    <string name="dlisinprogress">Another Download is already in progress please wait till it\'s finished!</string>
    <string name="downloadfailed">Download Failed!</string>
    <string name="vlc">Open in VLC</string>
    <string name="vlcerror">Can\'t open in VLC. Maybe it\'s not installed yet?</string>
    <string name="import_from_yt">Import subscriptions from youtube</string>
    <string name="app_theme">App theme</string>
    <string name="server_error">Server countered a problem. Maybe try another instance?</string>
    <string name="unknown_error">Network error!</string>
    <string name="empty">Username and Password can\'t be empty!</string>
    <string name="notgmail">This is not your gmail account!</string>
    <string name="defres">Default Video Resolution</string>
    <string name="preference_instance">settings</string>
    <string name="default_quality">default_quality</string>
    <string name="default_api_instance">https://pipedapi.kavin.rocks/</string>
    <string name="playerPosition">PLAYER_POSITION_KEY</string>
    <string name="playWhenReady">PLAYER_PLAY_WHEN_READY_KEY</string>
    <string name="default_instance">https://piped.kavin.rocks/</string>
</resources>