<?xml version="1.0" encoding="utf-8"?>
<com.github.libretube.SingleViewTouchableMotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playerMotionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/player_scene"
    tools:context=".fragments.PlayerFragment"
    >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_container"
        >

        <LinearLayout
            android:id="@+id/linLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/playerInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="inherit">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/playerTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/playerDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/playerTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layoutDirection="inherit"
                        android:padding="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textDirection="ltr"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@id/playerDescriptionArrow"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/playerViewsInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textDirection="ltr"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toStartOf="@id/playerDescriptionArrow"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/playerTitle" />

                    <ImageView
                        android:id="@+id/playerDescriptionArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:padding="4dp"
                        android:src="@drawable/ic_arrow_down"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/playerDescription"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:textDirection="ltr"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/playerTitleLayout" />
                app:layout_constraintTop_toBottomOf="@id/player_title_layout" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layoutDirection="inherit"
                android:orientation="horizontal"
                android:weightSum="5">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/player_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="16dp"
                        android:contentDescription="like"
                        android:src="@drawable/ic_like" />

                    <TextView
                        android:id="@+id/textLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/player_like"
                        android:layout_centerHorizontal="true"
                        android:text="1K" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relPlayer_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/player_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/ic_share" />

                    <TextView
                        android:id="@+id/textShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/player_share"
                        android:layout_centerHorizontal="true"
                        android:text="@string/share" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relPlayer_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/player_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/ic_download" />

                    <TextView
                        android:id="@+id/textDownload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/player_download"
                        android:layout_centerHorizontal="true"
                        android:text="@string/download" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relPlayer_vlc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/player_vlc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/ic_vlc" />

                    <TextView
                        android:id="@+id/textVlc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/player_vlc"
                        android:layout_centerHorizontal="true"
                        android:text="@string/vlc" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/player_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/ic_save" />

                    <TextView
                        android:id="@+id/textSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/player_save"
                        android:layout_centerHorizontal="true"
                        android:text="@string/save" />
                </RelativeLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/player_channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:layoutDirection="inherit"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/player_channelImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/player_channelName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:ellipsize="end"
                    android:gravity="left"
                    android:maxLines="1"
                    android:textDirection="ltr"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/player_subscribe"
                    app:layout_constraintStart_toEndOf="@+id/player_channelImage"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/player_subscribe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/subscribe"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:layoutDirection="inherit">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/player_recView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorSurface" />

<!--    <com.github.libretube.CustomExoPlayerView-->
    <com.google.android.exoplayer2.ui.StyledPlayerView
        android:id="@+id/player"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#000000"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/main_container"
        app:layout_constraintStart_toStartOf="@id/main_container"
        app:layout_constraintTop_toTopOf="@id/main_container"
        app:show_buffering="always" />

    <ImageView
        android:id="@+id/close_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:src="@drawable/ic_close"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/main_container"
        app:layout_constraintEnd_toEndOf="@id/main_container"
        app:layout_constraintTop_toTopOf="@id/main_container" />

    <ImageView
        android:id="@+id/play_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        android:src="@drawable/ic_play"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/close_imageView"
        app:layout_constraintEnd_toStartOf="@+id/close_imageView"
        app:layout_constraintTop_toTopOf="@+id/close_imageView" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="12dp"
        android:alpha="0"
        android:ellipsize="end"
        android:maxLines="1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/play_imageView"
        app:layout_constraintEnd_toStartOf="@+id/play_imageView"
        app:layout_constraintStart_toEndOf="@+id/player"
        app:layout_constraintTop_toTopOf="@+id/play_imageView" />

</com.github.libretube.SingleViewTouchableMotionLayout>